--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,36 @@
 /testcrypto
 /testspeed
 /testx509
+
+# ignoring local project/solution files
+*.vcxproj.filters
+*.vcxproj.user
+*.slnLaunch.user
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+x64_Debug_build/
+x64_Release_build/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+# Visual Studio cache/options directory
+.vs/
